# ciso-cli

./: .env.example  README.md  pyproject.toml
.github/workflows/: tests.yml
src/ciso_cli/: config.py  main.py
src/ciso_cli/api/: client.py  errors.py
src/ciso_cli/api/resources/: __init__.py  applied_controls.py  base.py  folders.py  reference_controls.py
src/ciso_cli/commands/: applied_controls.py  build.py  folders.py  reference_controls.py
src/ciso_cli/io/: __init__.py  table_reader.py
tests/: test_cli_build.py  test_client.py  test_config.py
