[project]
name = "ciso-cli"
version = "0.1.0"
description = "Fast CLI for CISO Assistant API"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.0",
  "rich>=13.7.1",
  "PyYAML>=6.0.1",
]

[project.scripts]
ciso = "ciso_cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
